--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,8 @@
 
     <groupId>com.ozerian</groupId>
     <artifactId>restaurant-manific</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
+    <version>1.0</version>
 
     <build>
         <plugins>
@@ -16,6 +17,9 @@
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-war-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
